august 24th update