@@ -8,15 +8,23 @@ public class GenericsVsCasts {
 
 		objarr.add("one");
 		objarr.add("two");
+		objarr.add(5);
+		objarr.add(16.5);
 
 		Object aa = objarr.get(0);
 		Object bb = objarr.get(1);
+		Object cc = objarr.get(2);
+		Object dd = objarr.get(3);
 
-		// String qq = objarr.get(0); // won't work
+		// String qq = objarr.get(0);
 		// String rr = objarr.get(1);
 
 		String ss = (String)objarr.get(0);
 		String tt = (String)objarr.get(1);
+		int uu = (int)objarr.get(2);
+		double vv = (double)objarr.get(3);
+
+		System.out.println(aa + " " + bb + " " + cc + " " + dd + " " + " " + ss + " " + tt + " " + uu + " " + vv);
 
 		System.out.println(objarr);
 
@@ -34,7 +42,7 @@ public class GenericsVsCasts {
 		Object b = strarr.get(1);
 
 		// ---------------------------------------
-		Integer i = new Integer(123);
+		Integer i = Integer.valueOf(123);
 		objarr.add(i);
 
 		System.out.println(objarr); // ["one", "two", 123] !!!
